@@ -131,7 +131,8 @@ class rofl_impl_syscall : virtual public rofl_impl_base<State, Levels>
 	__attribute__((always_inline))
 	static uintptr_t re_arg(T x)
 	{
-		if (std::is_integral<T>::value || std::is_enum<T>::value)
+		if (std::is_integral<T>::value || std::is_enum<T>::value ||
+		    std::is_pointer<T>::value)
 			return (uintptr_t)x;
 		union {
 			uintptr_t up;
